# FilesystemX

./: CMakeLists.txt  FilesystemX.hpp  FilesystemX_test.cpp  LICENSE  README.md  filesystem_cpp14.hpp  filesystem_cpp17.hpp  filesystem_platform_independent.hpp  filesystem_posix.hpp  filesystem_std.hpp  filesystem_xbx.hpp
backends/: posix.hpp  std_filesystem.hpp  support.hpp  win32.hpp  win32hpp
