project(FilesystemX)
cmake_minimum_required(VERSION 3.1)
set (CMAKE_CXX_STANDARD 17)
if (UNIX)
    set (CMAKE_BUILD_TYPE Debug)
    add_executable(TestApp17 FilesystemX_test.cpp)
    set (CMAKE_CXX_STANDARD 14)
    add_executable(TestApp14 FilesystemX_test.cpp)
    set (CMAKE_CXX_STANDARD 98)
    add_executable(TestAppPOSIX FilesystemX_test.cpp)
    target_link_libraries(TestApp14 -lstdc++fs)
    target_link_libraries(TestApp17 -lstdc++fs)
endif (UNIX)
if (WIN32)
    add_executable(TestAppWindows FilesystemX_test.cpp)
endif (WIN32)
